--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,100 @@
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1614281151354/work
+aiohttp==3.7.4
 appnope==0.1.2
 async-timeout==3.0.1
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
+attrs==20.3.0
 backcall==0.2.0
-blis @ file:///Users/runner/miniforge3/conda-bld/cython-blis_1612082819053/work
+blis==0.7.4
 boto==2.49.0
-boto3 @ file:///home/conda/feedstock_root/build_artifacts/boto3_1615248168818/work
-botocore @ file:///home/conda/feedstock_root/build_artifacts/botocore_1615241992791/work
+boto3==1.17.23
+botocore==1.20.23
 brotlipy==0.7.0
 bz2file==0.98
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1611555765219/work
-catalogue @ file:///Users/runner/miniforge3/conda-bld/catalogue_1612338455452/work
+cachetools==4.2.1
+catalogue==2.0.1
 certifi==2020.12.5
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1613414067184/work
-chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093477312/work
+cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1612993961228/work
+colorama==0.4.4
+cryptography==3.4.4
 cycler==0.10.0
-cymem @ file:///Users/runner/miniforge3/conda-bld/cymem_1612082720886/work
+cymem==2.0.5
 decorator==4.4.2
-en-core-web-md @ file:///home/conda/feedstock_root/build_artifacts/spacy-model-en_core_web_1614393679721/work/md
-google-api-core @ file:///home/conda/feedstock_root/build_artifacts/google-api-core-split_1614957104943/work
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1608136875028/work
-google-cloud-core @ file:///home/conda/feedstock_root/build_artifacts/google-cloud-core_1608136972897/work
+en-core-web-md==3.0.0
+google-api-core==1.25.1
+google-auth==1.24.0
+google-cloud-core==1.5.0
 google-cloud-storage==1.19.0
-google-crc32c @ file:///Users/runner/miniforge3/conda-bld/google-crc32c_1611954283050/work
-google-resumable-media @ file:///home/conda/feedstock_root/build_artifacts/google-resumable-media_1608141079349/work
-googleapis-common-protos @ file:///Users/runner/miniforge3/conda-bld/googleapis-common-protos-feedstock_1604414948494/work
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1614828367595/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.52.0
+grpcio==1.36.1
+idna==2.10
 ipykernel==5.5.0
 ipython==7.21.0
 ipython-genutils==0.2.0
 jedi==0.18.0
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1612119311452/work
-jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1589369830981/work
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+Jinja2==2.11.3
+jmespath==0.10.0
+joblib==0.17.0
 jupyter-client==6.1.11
 jupyter-core==4.7.1
 kiwisolver==1.2.0
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1610127533370/work
-matplotlib @ file:///opt/concourse/worker/volumes/live/24f995ab-f0a7-4bf7-4b0e-ea68b1f7e8f7/volume/matplotlib-base_1597876350104/work
+MarkupSafe==1.1.1
+matplotlib==3.3.1
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1610319065069/work
-murmurhash @ file:///Users/runner/miniforge3/conda-bld/murmurhash_1612082742328/work
-numpy @ file:///opt/concourse/worker/volumes/live/c646f6b9-b398-438d-7dc7-c7142e0ba44b/volume/numpy_and_numpy_base_1596235504536/work
+multidict==5.1.0
+murmurhash==1.0.5
+numpy==1.19.1
 olefile==0.46
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1612459636436/work
-pandas @ file:///opt/concourse/worker/volumes/live/f14cf8c4-c564-4eff-4b17-158e90dbf88a/volume/pandas_1602088128240/work
+packaging==20.9
+pandas==1.1.3
 parso==0.8.1
-pathy @ file:///home/conda/feedstock_root/build_artifacts/pathy_1613487335210/work
+pathy==0.4.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow @ file:///opt/concourse/worker/volumes/live/3e3d5813-e4fa-40da-6aa3-5a29558f718e/volume/pillow_1602788694493/work
-preshed @ file:///Users/runner/miniforge3/conda-bld/preshed_1612090630608/work
+Pillow==8.0.0
+pip==21.0.1
+preshed==3.0.5
 prompt-toolkit==3.0.16
 protobuf==3.15.5
 ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pydantic @ file:///Users/runner/miniforge3/conda-bld/pydantic_1614365341106/work
+pycparser==2.20
+pydantic==1.7.3
 Pygments==2.8.1
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
-PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291493748/work
+PySocks==1.7.1
 python-dateutil==2.8.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
+pytz==2021.1
 pyzmq==22.0.3
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1608156231189/work
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1614171254180/work
-s3transfer @ file:///home/conda/feedstock_root/build_artifacts/s3transfer_1610404472418/work
-scikit-learn @ file:///opt/concourse/worker/volumes/live/111833a2-339b-4578-413b-7337bb8fe64a/volume/scikit-learn_1598376920601/work
-scipy @ file:///opt/concourse/worker/volumes/live/7f5e51f8-abf3-4409-4c56-a4fb14cc9869/volume/scipy_1593104185999/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-shellingham @ file:///home/conda/feedstock_root/build_artifacts/shellingham_1612179560728/work
+requests==2.25.1
+rsa==4.7.2
+s3transfer==0.3.4
+scikit-learn==0.23.2
+scipy==1.5.0
+seaborn==0.11.0
+setuptools==52.0.0.post20210125
+shellingham==1.4.0
 six==1.15.0
-smart-open @ file:///home/conda/feedstock_root/build_artifacts/smart_open_1601560342103/work
-spacy @ file:///Users/runner/miniforge3/conda-bld/spacy_1615020688808/work
-spacy-legacy @ file:///home/conda/feedstock_root/build_artifacts/spacy-legacy_1612002681526/work
-srsly @ file:///Users/runner/miniforge3/conda-bld/srsly_1612367389105/work
-thinc @ file:///Users/runner/miniforge3/conda-bld/thinc_1612348878611/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+smart-open==2.2.1
+spacy==3.0.3
+spacy-legacy==3.0.1
+srsly==2.4.0
+thinc==8.0.1
+threadpoolctl==2.1.0
 tornado==6.1
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1614982742480/work
+tqdm==4.59.0
 traitlets==5.0.5
-typer @ file:///home/conda/feedstock_root/build_artifacts/typer_1609874382867/work
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1602702424206/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1611695416663/work
-wasabi @ file:///home/conda/feedstock_root/build_artifacts/wasabi_1612156086016/work
+typer==0.3.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+wasabi==0.8.2
 wcwidth==0.2.5
+wheel==0.36.2
 xgboost==1.3.3
-yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1610354259068/work
+yarl==1.6.3
